app/src/main/java/com/example/jokeapp/domain/Errors/JokeFailure.kt
package com.example.jokeapp.domain.Errors

interface JokeFailure {
    fun getMessage() : String
}